# stactools-hotosm

./: .gitignore  .pre-commit-config.yaml  .prettierignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish-extension.yml
docs/: ingest.md
examples/: Maxar Open Data.ipynb  OAM STAC Items.ipynb  STAC Ingest.ipynb  maxar-opendata-collection.json  openaerialmap-collection.json
scripts/: lint  test  typecheck
src/stactools/hotosm/: __init__.py  __version__.py  cli.py  constants.py  exceptions.py  oam_metadata.py  oam_metadata_client.py  stac.py  stac_common.py
src/stactools/hotosm/maxar/: __init__.py  stac.py  sync.py
stac-extension/: CHANGELOG.md  README.md  package.json
stac-extension/examples/: item.json
stac-extension/json-schema/: schema.json
tests/: conftest.py  test_oam_metadata.py  test_oam_metadata_client.py  test_package.py  test_stac.py  test_stac_extension.py
tests/data/: oam_meta_api_response10.json
tests/maxar/: __init__.py  test_stac.py  test_sync.py
tests/maxar/data/: catalog.json  event_info.json  generate_fixtures.py  item.json
