[project]
name = "stactools-hotosm"
description = "STAC creation tools for Humanitarian OpenStreetMap Team's OpenAerialMap data"
readme = "README.md"
requires-python = ">=3.11"
license = "AGPL-3.0"
dynamic = ["version"]

dependencies = [
    "pystac[validation]>=1.12.2",
    "requests>=2.32.3",
    "rio-stac>=0.10.1",
]

[project.optional-dependencies]
ingest = [
    "click>=8.1.8",
    "pypgstac[psycopg]>=0.9.6",
]

[project.scripts]
hotosm = "stactools.hotosm.cli:main"

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pyproj>=3.7.1",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.0",
    "responses>=0.25.7",
    "ruff>=0.11.2",
    "shapely>=2.1.0",
    "types-requests>=2.32.0.20250328",
    "types-shapely>=2.0.0.20250326",
]
demo = [
    "notebook>=7.3.3",
    "rustac>=0.7.2",
    "pypgstac[psycopg]>=0.9.6",
]

[tool.pytest.ini_options]
testpaths = [
    "tests"
]

[tool.hatch.version]
path = "src/stactools/hotosm/__version__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/stactools"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
fix = true
line-length = 88
target-version = "py310"
exclude = [
    ".ruff_cache",
    "__pypackages__",
    "build",
    "dist",
    "stactools/hotosm/__version__.py",
]

[tool.ruff.lint]
select = ["ARG", "I", "E", "W", "D", "B", "F", "N", "Q"]
ignore = ["N805", "B008"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
explicit_package_bases = true
files = ["src", "tests"]
mypy_path = "$MYPY_CONFIG_FILE_DIR/src"
namespace_packages = true

[[tool.mypy.overrides]]
module = ["pypgstac.db", "pypgstac.load", "rasterio.*", "rio_stac.stac"]
follow_untyped_imports = true
ignore_missing_imports = true

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.2.1"
version_files = [
    "pyproject.toml:version",
    "stactools/hotosm/__version__.py",
]
changelog_file = "CHANGELOG.md"
update_changelog_on_bump = true
